Fix sidebar overlap and overflow on desktop

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -18,10 +18,11 @@
   }
 
   @media screen and (min-width: $sidebar-screen-min-width) {
-    height: 100vh;
-    overflow-y: auto;               // Add scrollbar if the sidebar is too long
-    position: fixed;
-    padding-top: $masthead-height;
+    position: sticky;
+    top: $masthead-height;
+    height: auto;
+    overflow: visible;
+    padding-top: 0 !important;
   }
 
   @include breakpoint($large) {
@@ -154,10 +155,14 @@
   }
 
   img {
-    width: 220px;
-    height: 330px;
+    display: block;
+    width: 100%;
+    max-width: 200px;
+    aspect-ratio: 2 / 3;
+    height: auto;
     object-fit: cover;
     border-radius: 16px;
+    margin: 0 auto;
 
     @include breakpoint($large) {
       padding: 5px;
@@ -316,7 +321,7 @@
     padding-top: 2px;
     padding-bottom: 2px;
     color: inherit;
-    font-size: $type-size-5;
+    font-size: $type-size-6;
     text-decoration: none;
 
     &:hover {
